src/test/ui/lifetimes/lifetime-errors/ex3-both-anon-regions-2.stderr
error[E0623]: lifetime mismatch
  --> $DIR/ex3-both-anon-regions-2.rs:2:10
   |
LL | fn foo(&mut (ref mut v, w): &mut (&u8, &u8), x: &u8) {
   |                                   ---           --- these two types are declared with different lifetimes...
LL |     *v = x;
   |          ^ ...but data from `x` flows here

error: aborting due to previous error

